tests/fixtures/invalid/block_enum_tag_out_of_scope.c
int main() {
    {
        enum Local { LOCAL = 1 };
    }
    typedef enum Local Local;
    Local value = LOCAL;
    return value;
}
